--- a/src/App.scss
+++ b/src/App.scss
@@ -174,14 +174,13 @@ HOME/LANDING PAGE
         }
 
         label:first-child {
-            width: 80%;
-            margin-left: -30px;
+            width: 100%;
+            // margin-left: -30px;
 
             input {
-                border-top-left-radius: 5px;
-                border-bottom-left-radius: 5px;
+                border-radius: 5px;
                 border: 1px solid $font-color;
-                border-right: none;
+                // border-right: none;
             }
         }
 
@@ -189,6 +188,7 @@ HOME/LANDING PAGE
             width: 20%;
             margin-left: -32px;
             position: relative;
+            display: none;
 
             input {
                 border-top-right-radius: 5px;
@@ -315,17 +315,16 @@ RESULTS PAGE
         }
 
         label:first-child {
-            width: 60%;
+            width: 70%;
 
             @media (max-width: 650px) {
-                width: 75%;
+                width: 100%;
             }
 
             input {
-                border-top-left-radius: 5px;
-                border-bottom-left-radius: 5px;
+                border-radius: 5px;
                 border: 1px solid $dark-yellow;
-                border-right: none;
+                // border-right: none;
             }
         }
 
@@ -333,6 +332,8 @@ RESULTS PAGE
             width: 15%;
             margin-left: -32px;
             position: relative;
+
+            display: none;
 
             @media (max-width: 650px) {
                 width: 25%;
@@ -376,7 +377,7 @@ RESULTS PAGE
             font-weight: 500;
             padding: 9px 14px;
             display: inline-block;
-            margin-left: 15px;
+            // margin-left: 15px;
             vertical-align: 2px;
 
             @media (max-width: 650px) {
